--- a/usingcss.html
+++ b/usingcss.html
@@ -10,6 +10,6 @@ p {
 
 <title> My first page</title></head>
 <body style="background-color:powderblue">
-<p>This text will be green</p>
+<p>This text will be green Tis paragraph has changed</p>
 <p style="color: red;"> This will be red</p>
 </body></html>
